--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@playcanvas/web-components": "^0.2.6",
     "concurrently": "^8.2.0",
     "http-server": "^14.1.1",
+    "jsdom": "^26.1.0",
+    "playcanvas": "^2.7.3",
     "typescript": "^5.1.6"
   }
 }
