--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "concurrently": "^8.2.0",
     "http-server": "^14.1.1",
     "jsdom": "^26.1.0",
-    "playcanvas": "^2.7.3",
-    "typescript": "^5.1.6"
+    "playcanvas": "^2.7.4",
+    "typescript": "^5.1.6",
+    "vite": "^6.3.4"
   }
 }
