--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,8 @@
     "sourceMap": true,
     "declaration": false,
     "removeComments": false,
-    "lib": ["dom", "es2017", "es2018", "es2019"]
+    "lib": ["dom", "es2017", "es2018", "es2019"],
+    "types": ["playcanvas"]
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules"]
